--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Version 1.00, Fri Jul  8 07:08:44 UTC 2005
+	- added patch from Simon Wilcox to clarify return value of value()
+	- tested coverage
+	- made traditional Makefile.PL
+	- added POD tests
+	- signed distribution
+	- bumped up version number
+
 Version 0.12, Wed Jul  7 04:39:49 UTC 2004
 	- added Makefile.PL for ExtUtils::MakeMaker compatibility
 	- skip some tests without Test::CGI::Untaint installed
