--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 1.01, Sat Jul  9 20:31:19 UTC 2005
+	- clarified the return value in the documentation (Dave Baker)
+
 Version 1.00, Fri Jul  8 07:08:44 UTC 2005
 	- added patch from Simon Wilcox to clarify return value of value()
 	- tested coverage
